fix missing reinit of 'instance' for configless samplers

--- a/util/sample_init_scripts/genders/systemd/etc/sysconfig/ldms.d/ldms-functions.in
+++ b/util/sample_init_scripts/genders/systemd/etc/sysconfig/ldms.d/ldms-functions.in
@@ -490,6 +490,7 @@ start_ldmsd_plugins () {
 		grok="`config_from_gender $configtmp`"
 		eval extraconfig='$grok'
 		conf="0"
+		instance=""
 		schema=""
 		if test -n "$extraconfig"; then
 			conf="v2"
