Update the systemctl files to include PAPI service.

--- a/ldms/etc/Makefile.am
+++ b/ldms/etc/Makefile.am
@@ -16,6 +16,7 @@ do_subst = @LDMS_SUBST_RULE@
 
 EXTRA_DIST = ldmsauth.conf \
 	     sampler.conf \
+	     papi-sampler.conf \
 	     kokkos.conf \
 	     sampler.conf.cray_xc.example \
 	     aggregator.conf \
@@ -25,12 +26,14 @@ EXTRA_DIST = ldmsauth.conf \
 	     ldmsd.sampler.env.in \
 	     ldmsd.sampler.env.cray_xc.example \
 	     ldmsd.kokkos.env.in \
+	     papi-sampler.env.in \
 	     ldms.plugstack.env.in \
 	     ldms.cfg
 
 ENV_FILES = $(builddir)/ldmsd.sampler.env \
 	    $(builddir)/ldmsd.aggregator.env \
 	    $(builddir)/ldmsd.kokkos.env \
+	    $(builddir)/papi-sampler.env \
 	    $(builddir)/ldms.plugstack.env
 
 EXAMPLE_FILES = $(srcdir)/aggregator.conf.cray_xc.example \
@@ -50,6 +53,7 @@ install-data-local: $(ENV_FILES)
 	$(INSTALL) -m 600 $(srcdir)/ldmsauth.conf $(CONF_DIR)
 	$(INSTALL_DATA) $(srcdir)/ldms.cfg $(CONF_DIR)
 	$(INSTALL_DATA) $(srcdir)/sampler.conf $(CONF_DIR)
+	$(INSTALL_DATA) $(srcdir)/papi-sampler.conf $(CONF_DIR)
 	$(INSTALL_DATA) $(srcdir)/aggregator.conf $(CONF_DIR)
 	$(INSTALL_DATA) $(srcdir)/kokkos.conf $(CONF_DIR)
 	$(INSTALL_DATA) $(EXAMPLE_FILES) $(CONF_DIR)/
@@ -60,6 +64,7 @@ uninstall-local:
 	rm -f $(CONF_DIR)/ldmsd.kokkos.env
 	rm -f $(CONF_DIR)/ldmsauth.conf
 	rm -f $(CONF_DIR)/sampler.conf
+	rm -f $(CONF_DIR)/papi-sampler.conf
 	rm -f $(CONF_DIR)/aggregator.conf
 	rm -f $(CONF_DIR)/kokkos.conf
 	rm -f $(CONF_DIR)/ldms.cfg
