--- a/ldms/etc/systemd/Makefile.am
+++ b/ldms/etc/systemd/Makefile.am
@@ -4,14 +4,16 @@ do_subst = @LDMS_SUBST_RULE@
 
 SVC_FILES = $(builddir)/ldmsd.sampler.service \
 	    $(builddir)/ldmsd.aggregator.service \
-	    $(builddir)/ldmsd.kokkos.service
+	    $(builddir)/ldmsd.kokkos.service \
+	    $(builddir)/papi-sampler.service
 
 $(builddir)/%.service: $(srcdir)/%.service.in
 	$(do_subst) < $< > $@
 
 EXTRA_DIST = ldmsd.aggregator.service.in \
 	     ldmsd.sampler.service.in \
-	     ldmsd.kokkos.service.in
+	     ldmsd.kokkos.service.in \
+	     papi-sampler.service.in
 
 install-data-local: $(SVC_FILES)
 	$(MKDIR_P) $(SYSTEMD_DIR)
@@ -21,3 +23,4 @@ uninstall-local:
 	rm -f $(SYSTEMD_DIR)/ldmsd.sampler.service
 	rm -f $(SYSTEMD_DIR)/ldmsd.aggregator.service
 	rm -f $(SYSTEMD_DIR)/ldmsd.kokkos.service
+	rm -f $(SYSTEMD_DIR)/papi-sampler.service
