Add commbined Aries MMR configuration files

--- a/ldms/etc/systemd/ldmsd.sampler.service.in
+++ b/ldms/etc/systemd/ldmsd.sampler.service.in
@@ -7,7 +7,7 @@ Type = forking
 EnvironmentFile = @sysconfdir@/ldms/ldmsd.sampler.env
 Environment = HOSTNAME=%H
 ExecStartPre = /bin/mkdir -p @localstatedir@/run/ldmsd
-ExecStartPre = -/bin/bash -c "test -n \"${LDMS_JOBINFO_DATA_FILE}\" && rm -f ${LDMS_JOBINFO_DATA_FILE} || rm -f /var/run/ldms_jobinfo.data"
+ExecStartPre = -/bin/bash -c "test -n \"${LDMS_JOBINFO_DATA_FILE}\" && touch ${LDMS_JOBINFO_DATA_FILE} || touch /var/run/ldms_jobinfo.data"
 ExecStart = @sbindir@/ldmsd \
 		-x ${LDMSD_XPRT}:${LDMSD_PORT} \
 		-c ${LDMSD_PLUGIN_CONFIG_FILE} \
