--- a/ldms/scripts/envldms.sh.in
+++ b/ldms/scripts/envldms.sh.in
@@ -2,11 +2,28 @@
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
+if ! test -f $libdir/ovis-lib-configvars.sh; then
+	echo "$libdir/ovis-lib-configvars.sh not found"
+	exit 1
+fi
+if ! test -f $libdir/ovis-ldms-configvars.sh; then
+	echo "$libdir/ovis-ldms-configvars.sh not found"
+	exit 1
+fi
+. $libdir/ovis-lib-configvars.sh
+. $libdir/ovis-ldms-configvars.sh
+if test -z "$ZAP_LIBPATH"; then
+	ZAP_LIBPATH=$ovis_lib_plugins
+fi
+export ZAP_LIBPATH
+if test -z "$LDMSD_PLUGIN_LIBPATH"; then
+	LDMSD_PLUGIN_LIBPATH=$ovis_ldms_plugins:$ovis_lib_plugins
+fi
+export LDMSD_PLUGIN_LIBPATH
+export LD_LIBRARY_PATH=${BUILDDIR}/lib:${exec_prefix}/lib:$ovis_ldms_plugins:$ovis_lib_plugins:@libeventpath@$LD_LIBRARY_PATH
+
 BUILDDIR=@prefix@
 export PATH=${BUILDDIR}/sbin:$PATH
-export LD_LIBRARY_PATH=@libdir@:@pkglibdir@:@libeventpath@:$LD_LIBRARY_PATH
-export ZAP_LIBPATH=@pkglibdir@
-export LDMSD_PLUGIN_LIBPATH=@pkglibdir@
 export PYTHONPATH=@pythondir@:$PYTHONPATH
 
 set -x
