--- a/ldms/scripts/ldms-py-rename.sh.in
+++ b/ldms/scripts/ldms-py-rename.sh.in
@@ -7,10 +7,27 @@ allowroot=0
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
-BUILDDIR=@prefix@
-export PYTHONPATH=@pythondir@
+if ! test -f $libdir/ovis-lib-configvars.sh; then
+	echo "$libdir/ovis-lib-configvars.sh not found"
+	exit 1
+fi
+if ! test -f $libdir/ovis-ldms-configvars.sh; then
+	echo "$libdir/ovis-ldms-configvars.sh not found"
+	exit 1
+fi
 . $libdir/ovis-lib-configvars.sh
 . $libdir/ovis-ldms-configvars.sh
+if test -z "$ZAP_LIBPATH"; then
+	ZAP_LIBPATH=$ovis_lib_plugins
+fi
+export ZAP_LIBPATH
+if test -z "$LDMSD_PLUGIN_LIBPATH"; then
+	LDMSD_PLUGIN_LIBPATH=$ovis_ldms_plugins:$ovis_lib_plugins
+fi
+export LDMSD_PLUGIN_LIBPATH
+export LD_LIBRARY_PATH=${BUILDDIR}/lib:${exec_prefix}/lib:$ovis_ldms_plugins:$ovis_lib_plugins:$LD_LIBRARY_PATH
+BUILDDIR=@prefix@
+export PYTHONPATH=@pythondir@
 # Manually redefine portbase to avoid collisions.
 # Base should be above the maximum in :
 #  cat /proc/sys/net/ipv4/ip_local_port_range
@@ -70,10 +87,7 @@ export LDMSD_SOCKPATH=${TESTDIR}/run
 mkdir -p $STOREDIR $SOCKDIR $LOGDIR $LDMSD_SOCKPATH $STOREDIR/spool
 echo "logs and data stored under $TESTDIR"
 
-export LD_LIBRARY_PATH=${BUILDDIR}/lib:${exec_prefix}/lib:$ovis_ldms_plugins:$ovis_lib_plugins::$LD_LIBRARY_PATH
-export ZAP_LIBPATH=$ovis_lib_plugins
 export PATH=${BUILDDIR}/sbin:$PATH
-export LDMSD_PLUGIN_LIBPATH=$ovis_ldms_plugins:$ovis_lib_plugins
 
 # whack the daemons we own
 pkill ldmsd
