Upgrade Kernel support
Various features that affected the metric set memory
format broke the kernel support.

--- a/kernel/kldms/Kbuild
+++ b/kernel/kldms/Kbuild
@@ -5,6 +5,6 @@ CONFIG_LDMS_VMSTAT=m
 
 obj-$(CONFIG_LDMS)		+= kldms.o
 obj-$(CONFIG_LDMS_VMSTAT)	+= kldms_vmstat.o
-obj-$(CONFIG_LDMS_GPCDR)	+= kldms_gpcdr.o
+# obj-$(CONFIG_LDMS_GPCDR)	+= kldms_gpcdr.o
 
 # kldms_gpcdr-objs		:= kgpcdr.o gpcdr.o ghal.o
