--- a/ldms/src/core/Makefile.am
+++ b/ldms/src/core/Makefile.am
@@ -9,7 +9,7 @@ AM_CFLAGS += \
 ldmscoreincludedir = $(includedir)/ldms
 ldmscoreinclude_HEADERS = ldms.h ldms_core.h ldms_xprt.h ldms_auth.h kldms_req.h
 
-libldms_la_SOURCES = ldms.c ldms_xprt.c ldms_private.h kldms_req.h \
+libldms_la_SOURCES = ldms.c ldms_xprt.c ldms_private.h \
 		     ldms_auth.c ldms_xprt_auth.c
 libldms_la_LIBADD = -ldl -lpthread -lcoll \
 	@OVIS_LIB_LIB64DIR_FLAG@ @OVIS_LIB_LIBDIR_FLAG@ \
