--- a/ldms/src/store/Makefile.am
+++ b/ldms/src/store/Makefile.am
@@ -1,9 +1,11 @@
 lib_LTLIBRARIES =
 pkglib_LTLIBRARIES =
 CORE = ../core
+LDMSD = ../ldmsd
 AM_CFLAGS = -I$(srcdir)/$(CORE) -I$(top_srcdir) -I.. @OVIS_LIB_INCDIR_FLAG@ \
-	    -I$(srcdir)/../ldmsd
-STORE_LIBADD = $(CORE)/libldms.la -lcoll -lovis_util @OVIS_LIB_LIB64DIR_FLAG@ \
+	    -I$(srcdir)/$(LDMSD)
+STORE_LIBADD = $(CORE)/libldms.la $(LDMSD)/libplugattr.la \
+		-lcoll -lovis_util @OVIS_LIB_LIB64DIR_FLAG@ \
 	       @OVIS_LIB_LIBDIR_FLAG@
 
 ldmsstoreincludedir = $(includedir)/ldms
